Bug fix: Increased 'z-index' on 'edit form'.
When clump edits are previewed they're given a 10+ z-index from the last preview, which ended up obfuscating the 'edit form' previously set at a 'z-index' of '15'.

--- a/data_clump_flow_app/css/dataflow.css
+++ b/data_clump_flow_app/css/dataflow.css
@@ -631,7 +631,11 @@ li ol>li:before {
   /* width: 80vw; */
   width: 88vw;
   max-width: none;
-  z-index: 15;
+  /* With the 'pre' panel incrementing at 10 levels each time,
+   *   setting this z-index to 1 million at 10 per jump allows
+   *   for near a hundred thousand clump clicks before a conflict.
+   */
+  z-index: 999999; /* 1 million - 1 = 100,000 clump clicks. */
 }
 
 .clump-form-div-wrapper {
